--- a/ClassicCar.html
+++ b/ClassicCar.html
@@ -22,12 +22,12 @@
 
     
     <div class="carimgs">
-        <img src="images/car1.jpg">
-        <img src="images/car2.jpg">
-        <img src="images/car3.jpg">
-        <img src="images/car4.jpg">
-        <img src="images/car6.jpg">
-        <img src="images/car5.webp">
+        <img src="car1.jpg">
+        <img src="car2.jpg">
+        <img src="car3.jpg">
+        <img src="car4.jpg">
+        <img src="car6.jpg">
+        <img src="car5.webp">
       </div>
       
       <div class="Carform">
